# libufe-apicpp

./: CMakeLists.txt  build_and_test.sh
conf/: FEB03_LED_test1.json  GTrig_Test.json  GTrig_Test_v2.json  GTrig_only_config1.json  GTrig_only_config2.json  PDdiscri-A2-CH5.json  PDdiscri-Test.json  babyMIND-config.json  babyMIND-config_new.json  config-desc.json
examples/: CMakeLists.txt  bpar_gen.cpp  conf_gen.cpp  speed_test.cpp
src/: CMakeLists.txt  UFEConfigBuffer.cpp  UFEConfigBuffer.h  UFEConfigFrame.cpp  UFEConfigFrame.h  UFEConfigLib.cpp  UFEConfigLib.h  UFEContext.cpp  UFEContext.h  UFEDataContainer.cpp  UFEDataContainer.h  UFEDataRecorder.cpp  UFEDataRecorder.h  UFEDeff.h  UFEDevice.cpp  UFEDevice.h  UFEError.cpp  UFEError.h
tests/: CMakeLists.txt  TestDataContainer.cpp  TestDataContainer.h  UnitTests.cpp
tools/: CMakeLists.txt  bpar_gen.cpp  conf_gen.cpp  speed_test.cpp
